Implement platform-specific options for taskbar